# move-aptos-compiler-wasm

./: .gitignore  README.md
Docs/: How_to_Wasm.md  What_is_Cargo-toml.md
Learning/: README.md  a.md
Learning/first-wasm/: Cargo.toml  README.md
Learning/first-wasm-simple/: Cargo.toml
Learning/first-wasm-simple/src/: main.rs
Learning/first-wasm-test/: Cargo.toml  README.md
Learning/first-wasm-test/src/: lib.rs
Learning/first-wasm/hello-wasm/: Cargo.toml
Learning/hello-wasm/: Cargo.toml  README.md
Learning/hello-wasm/src/: lib.rs
Learning/simple-wasm/: Cargo.toml
Learning/test-wasm/: Cargo.toml  README.md
Learning/test-wasm/hello-wasm/src/: lib.rs
Learning/wasm-by-other/: Cargo.toml
Learning/wasm-by-other/arithmetic/: Cargo.toml
Learning/wasm-by-other/arithmetic/src/: lib.rs
Learning/wasm-by-other/html/: README.md  index.html  package.json
Learning/wasm-by-other/src/: lib.rs
Move-contrct/: Move.toml  README.md
Move-contrct/.aptos/: config.yaml
Move-contrct/sources/: main.move
Rust-Test/: README.md
Rust-Test/test-feature/: Cargo.toml
Rust-Test/test-feature/src/: main.rs
aptos-move-compiler-v2-wasm/: Cargo.toml  REDME.md
aptos-move-compiler-v2-wasm/evm/hardhat-examples/: package-lock.json
aptos-move-compiler-v2-wasm/move-compiler/: Cargo.toml  README.md
aptos-move-compiler-v2-wasm/move-compiler-v2/: Cargo.toml  README.md
aptos-move-compiler-v2-wasm/move-compiler/src/: interface_generator.rs
aptos-move-compiler-wasm/: Cargo.toml  REDME.md
aptos-move-compiler-wasm/hello-wasm/pkg/: hello_wasm.d.ts
aptos-move-compiler-wasm/hello-wasm/src/: lib.rs
aptos-move-compiler-wasm/move-compiler/: Cargo.toml
aptos-move-compiler-wasm/move-compiler/src/command_line/: compiler.rs
ell-move-compiler-wasm/: REDME.md
ell-move-compiler-wasm/hello-wasm/: Cargo.toml  README.md
ell-move-compiler-wasm/hello-wasm/src/: lib.rs
ell-move-compiler-wasm/move-compiler/: README.md
ell-move-compiler-wasm/move-compiler/src/: lib.rs
ell-move-compiler-wasm/move-compiler/src/diagnostics/: mod.rs
frontend/test/hello_wasm/: hello_wasm.js  package-lock.json  package.json
frontend/test/move-wasm-pkg/: move_compiler_wasm.d.ts  move_compiler_wasm.js  move_compiler_wasm_bg.wasm.d.ts  move_wasm.html
move-compiler-wasm/: Cargo.toml  README.md
move-compiler-wasm/pkg/: package.json
move-compiler-wasm/src/: lib.rs
sim-move-compiler-v2-wasm/: REDME.md  tree.txt
sim-move-compiler-v2-wasm/hello-wasm/: Cargo.toml  README.md
sim-move-compiler-v2-wasm/move-binary-format/: Cargo.toml
sim-move-compiler-v2-wasm/move-compiler/: README.md
sim-move-compiler-v2-wasm/move-compiler-v2/: README.md
sim-move-compiler-v2-wasm/move-compiler-v2/transactional-tests/: Cargo.toml
sim-move-compiler-v2-wasm/move-compiler/src/parser/: mod.rs
sim-move-compiler-v2-wasm/move-model/: Cargo.toml
sim-move-compiler-v2-wasm/move-model/bytecode-test-utils/: Cargo.toml
sim-move-compiler-v2-wasm/move-prover/: Cargo.toml
sim-move-compiler-v2-wasm/move-prover/lab/: Cargo.toml
sim-move-compiler-v2-wasm/scripts/: build.sh
sim-move-compiler-v2-wasm/tools/move-cli/: Cargo.toml
sim-move-compiler-v2-wasm/tools/move-package/: Cargo.toml
sim-move-compiler-v2-wasm/tools/move-unit-test/: Cargo.toml
test/: README.md  example.move  move_wasm.html
test/hello_wasm/: hello_wasm_bg.wasm.d.ts
test/move-wasm-pkg/: move_compiler_wasm_bg.wasm
