[package]
name = "move-compiler-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
move-compiler = { path = "../aptos-core/third_party/move/move-compiler" }
# 添加其他必要的依赖

[profile.release]
lto = true
opt-level = 's'
