[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
description = "Move compiler wasm binding"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
move-compiler = { workspace = true }
move-command-line-common = { workspace = true }
move-symbol-pool = { workspace = true }
move-core-types = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = { workspace = true }
getrandom = { workspace = true }
