[workspace]
resolver = "2"
members = ["hello-wasm"]

[workspace.package]
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.75.0"

[workspace.dependencies]
wasm-bindgen = "0.2"
anyhow = "1.0.71"
move-compiler = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-command-line-common = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-symbol-pool = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-core-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-ir-types = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
