[package]
name = "move-compiler-v2"
version = "0.1.0"
authors = ["Aptos Labs"]
description = "Move compiler based on stackless bytecode"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptosfoundation.org/"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
abstract-domain-derive = { path = "../move-model/bytecode/abstract_domain_derive" }
anyhow = { workspace = true }
bcs = { workspace = true }
# move-binary-format = { path = "../move-binary-format" }
move-binary-format = { workspace = true }

# move-borrow-graph = { path = "../move-borrow-graph" }
# move-bytecode-source-map = { path = "../move-ir-compiler/move-bytecode-source-map" }
# move-bytecode-verifier = { path = "../move-bytecode-verifier" }
# move-command-line-common = { path = "../move-command-line-common" }


move-borrow-graph = { git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-bytecode-source-map = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-bytecode-verifier = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-command-line-common = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main" }

move-compiler = { path = "../move-compiler" }
move-core-types = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
# move-core-types = { path = "../move-core/types" }
move-disassembler = { path = "../tools/move-disassembler" }
# move-ir-types = { path = "../move-ir/types" }
move-ir-types = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-model = { path = "../move-model" }
move-stackless-bytecode = { path = "../move-model/bytecode" }
# move-symbol-pool = { path = "../move-symbol-pool" }
move-symbol-pool = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
clap = { workspace = true, features = ["derive", "env"] }
codespan-reporting = { workspace = true, features = ["serde", "serialization"] }
# ethnum = { workspace = true }
ethnum = "1.5.0"
# flexi_logger = { workspace = true }
flexi_logger = "0.27.4"
im = "15.0.0"
# itertools = { workspace = true }
itertools = "0.13"
# log = { workspace = true, features = ["serde"] }
log = "0.4.17"
# num = { workspace = true }
num = "0.4.0"
# once_cell = { workspace = true }
once_cell = "1.10.0"
#paste = "1.0.5"
# petgraph = { workspace = true }
petgraph = "0.6.5"

[dev-dependencies]
anyhow = { workspace = true }
datatest-stable = { workspace = true }
# move-command-line-common = { path = "../move-command-line-common" }
move-command-line-common = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
# move-ir-types = { path = "../move-ir/types" }
move-ir-types = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-prover-test-utils = { path = "../move-prover/test-utils" }
# move-stdlib = { path = "../move-stdlib" }
move-stdlib = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
# walkdir = { workspace = true }
walkdir = "2.3.3"

[lib]
doctest = false

[[test]]
name = "testsuite"
harness = false
doctest = false

[package.metadata.cargo-machete]
ignored = ["strum"]
