[package]
name = "move-compiler"
version = "0.0.1"
authors = ["Diem Association <opensource@diem.com>"]
description = "The definition of the Move source language, and its compiler"
publish = false
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
codespan-reporting = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
petgraph = { workspace = true }
regex = { workspace = true }
sha3 = { workspace = true }
tempfile = { workspace = true }

bcs = { workspace = true }

move-binary-format = { git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }

move-borrow-graph = { git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-bytecode-source-map = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-bytecode-verifier = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-command-line-common = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main" }
move-core-types = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-ir-to-bytecode = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-ir-types = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main"  }
move-symbol-pool = {  git = "https://github.com/aptos-labs/aptos-core", branch = "main" }

[dev-dependencies]
datatest-stable = { workspace = true }
move-stdlib = { git = "https://github.com/aptos-labs/aptos-core", branch = "main" }

[[test]]
name = "move_check_testsuite"
harness = false
