[package]
name = "hello-wasm"
version = "0.1.8"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { workspace = true }
getrandom = { workspace = true } 
serde-wasm-bindgen = { workspace = true } 
serde  = { workspace = true }
bcs = { workspace = true }
serde_bytes = { workspace = true }
move-compiler = { path = "../move-compiler" }
move-command-line-common = {  workspace = true }
move-symbol-pool = { workspace = true }
move-core-types = { workspace = true }
[profile.release]
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.release]
wasm-opt = false